--- a/EMS/form-bundle/src/Resources/views/debug/base.html.twig
+++ b/EMS/form-bundle/src/Resources/views/debug/base.html.twig
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <title>{{  block('title') }}</title>
-    <link rel="icon" href="{{ asset('bundles/emsform/static/favicon.ico') }}">
+    <link rel="icon" href="/favicon.ico">
 </head>
 <body class="bg-dark">
     <div class="wrapper m-5">
