--- a/EMS/form-bundle/src/Resources/views/debug/base.html.twig
+++ b/EMS/form-bundle/src/Resources/views/debug/base.html.twig
@@ -18,7 +18,24 @@
         <div id="wrapper-form" class="bg-light px-4 py-2">
             {% block content %}{% endblock %}
         </div>
-        {% block footer %}{% endblock %}
+        <div class="accordion mt-5" id="info">
+            <div class="card">
+                <div class="card-header" id="info-config-heading">
+                    <button class="btn btn-sm btn-link btn-block text-left" type="button" data-toggle="collapse" data-target="#info-config" aria-expanded="true" aria-controls="info-config">
+                        Show config
+                    </button>
+                </div>
+                <div id="info-config" class="collapse" aria-labelledby="info-config-heading" data-parent="#info">
+                    <div class="card-body">
+                        <code>
+                            <pre>
+                                {{- config|json_encode(constant('JSON_PRETTY_PRINT')) -}}
+                            </pre>
+                        </code>
+                    </div>
+                </div>
+            </div>
+        </div>
     </div>
     {% block javascripts %}
         <script type="application/javascript" src="{{ asset('bundles/emsform/js/debug.js') }}"></script>
