--- a/EMS/form-bundle/src/Resources/views/debug/iframe.html.twig
+++ b/EMS/form-bundle/src/Resources/views/debug/iframe.html.twig
@@ -17,11 +17,7 @@
 {% block content %}
     <div id="ems-form"></div>
     <div id="ems-message"></div>
-{% endblock %}
-
-{% block footer %}
-    <iframe id="ems-form-iframe" style="width: 100%;" src="{{ url('emsf_iframe', {'ouuid': config.id, '_locale': locale }) }}"></iframe>
-    {{ dump(config) }}
+    <iframe id="ems-form-iframe" class="d-none" src="{{ url('emsf_iframe', {'ouuid': config.id, '_locale': locale }) }}"></iframe>
 {% endblock %}
 
 {% block javascripts %}
