--- a/EMS/form-bundle/src/Resources/views/debug/form.html.twig
+++ b/EMS/form-bundle/src/Resources/views/debug/form.html.twig
@@ -26,6 +26,13 @@
 
 {% block content %}
     {% include config.template %}
+    {% if responses %}
+        <code>
+            <pre>
+                {{- responses|json_encode(constant('JSON_PRETTY_PRINT')) -}}
+            </pre>
+        </code>
+    {% endif %}
 {% endblock %}
 
 {% block javascripts %}
