fix: open debug action _blank

--- a/demo/skeleton/template_ems/actions.twig
+++ b/demo/skeleton/template_ems/actions.twig
@@ -1,5 +1,5 @@
 {% block form_instance_debug %}
-    <a href="{{ path('emsf_debug_form', { 'ouuid': object._id }) }}">
+    <a href="{{ path('emsf_debug_form', { 'ouuid': object._id }) }}" target="_blank">
         <i class="fa fa-bug"></i>&nbsp;Debug
     </a>
 {% endblock form_instance_debug %}
