--- a/EMS/core-bundle/src/Resources/views/user/mail.twig
+++ b/EMS/core-bundle/src/Resources/views/user/mail.twig
@@ -2,8 +2,9 @@
 {%- trans_default_domain 'emsco-user' -%}
 {%- set confirmationUrl = path('emsco_user_resetting_reset', {'token': user.confirmationToken}) -%}
 {% autoescape false %}
-{{ 'user.resetting.email.message'|trans({
+{{ 'user.resetting.email.message'|i18n(user.localePreferred|default('en'))|trans({
     '%username%': user.username,
+    '%token%': user.confirmationToken,
     '%confirmationUrl%': absolute_url(confirmationUrl)
 }) }}
 {% endautoescape %}
