--- a/EMS/admin-ui-bundle/src/Resources/views/bootstrap5/wysiwygprofile/index.html.twig
+++ b/EMS/admin-ui-bundle/src/Resources/views/bootstrap5/wysiwygprofile/index.html.twig
@@ -1,113 +1,43 @@
-{% trans_default_domain 'EMSCoreBundle' %}{% extends '@EMSAdminUI/bootstrap5/base/admin.html.twig' %} {% block title %} {{ 'WYSIWYG options'|trans }} {% endblock %}
-{% block pagetitle %} {{ 'WYSIWYG options'|trans }} {% endblock %}
+{% trans_default_domain 'EMSCoreBundle' %}
+{% extends '@EMSAdminUI/bootstrap5/base/admin.html.twig' %}
+
+{% block title %}{{ 'WYSIWYG options'|trans }}{% endblock %}
+
+{% block pagetitle %}{{ block('title') }}{% endblock %}
 
 {% block breadcrumb %}
 	<ol class="breadcrumb">
-		<li class="breadcrumb-item"><i class="fa fa-language"></i> {{ 'WYSIWYG options'|trans }}</li>
-   	</ol>
+		<li><i class="fa fa-language"></i> {{ 'WYSIWYG options'|trans }}</li>
+	</ol>
 {% endblock %}
 
 {% block body %}
-<div class="row">
-	<div class="col-md-6">
-		<div class="box" id="profiles-box">
-			<div class="box-header with-border">
-				<i class="fa fa-gear"></i>
-				<h3 class="box-title">{{ 'WYSIWYG profiles'|trans }}</h3>
-				<div class="btn-group  float-end">
-					<a class="btn btn-xs btn-primary" href="{{ path('ems_wysiwyg_profile_new') }}"><i class="fa fa-plus"></i> {{ 'Add a profile'|trans }}</a>
-				</div>
-			</div>
-			<!-- /.box-header -->
-			{% if profiles|length %}
-                {{ form_start(form) }}
-    			<div class="box-body no-padding">
-    				<ol class="nested-sortable vertical" id="root-list">
-    					{% for profile in profiles %}
-    						<li id="{{ profile.id }}" class="mjs-nested-sortable-no-nesting mjs-nestedSortable-leaf">
-                				<div class="box-header ui-sortable-handle">
-        							<div class="float-end box-tools ui-sortable-handle">
-        								<div class="btn-group">
-                                            {% include '@EMSAdminUI/bootstrap5/elements/get-button.html.twig' with {
-    											'url':  path('ems_wysiwyg_profile_edit', {'id': profile.id}),
-    											'label': 'Edit',
-    											'icon': 'pencil'
-    										}%}
-        								</div>
-        							</div>
-        							<h3 class="box-title">{{ profile.name }}</h3>
-        						</div>
-        					</li>
-    					{% endfor %}
-    				</ol>
-				</div>
-
-        		    <div>
-        		    	<div class="box-footer">
-            				<div class="btn-group">
-            				    {{ form_widget(form.reorder) }}
-            				</div>
-                		</div>
-                	</div>
-        		    {{ form_end(form) }}
-            		<!-- /.box-footer -->
-				{% else %}
-    				<div class="box-body">
-					    {{'Click on \'Add a profile\' to create a first WYSIWYG profile'|trans}}
-					</div>
-				{% endif %}
-			<!-- /.box-body -->
-		</div>
-	</div>
+	<div class="row">
 		<div class="col-md-6">
-		<div class="box" id="styles-set-box">
-			<div class="box-header with-border">
-				<i class="fa fa-css3"></i>
-				<h3 class="box-title">{{ 'WYSIWYG styles sets'|trans }}</h3>
-				<div class="btn-group  float-end">
-					<a class="btn btn-xs btn-primary" href="{{ path('ems_wysiwyg_styles_set_new') }}"><i class="fa fa-plus"></i> {{ 'Add a style set'|trans }}</a>
-				</div>
-			</div>
-			<!-- /.box-header -->
-			{% if stylesSets|length %}
+			<div>
+				{%  set toolbar %}
+					<a class="btn btn-primary" href="{{ path('ems_wysiwyg_profile_new') }}"><i class="fa fa-plus"></i> {{ add_label|default(formProfiles.vars.add_label)|trans }}</a>
+				{%  endset %}
 
-                {{ form_start(formStylesSet) }}
-    			<div class="box-body no-padding">
-    				<ol class="nested-sortable vertical" id="root-list">
-    					{% for stylesSet in stylesSets %}
-    						<li id="{{ stylesSet.id }}" class="mjs-nested-sortable-no-nesting mjs-nestedSortable-leaf">
-                				<div class="box-header ui-sortable-handle">
-        							<div class="float-end box-tools ui-sortable-handle">
-        								<div class="btn-group">
-                                            {% include '@EMSAdminUI/bootstrap5/elements/get-button.html.twig' with {
-    											'url':  path('ems_wysiwyg_styles_set_edit', {'id': stylesSet.id}),
-    											'label': 'Edit',
-    											'icon': 'pencil'
-    										}%}
-        								</div>
-        							</div>
-        							<h3 class="box-title">{{ stylesSet.name }}</h3>
-        						</div>
-        					</li>
-    					{% endfor %}
-    				</ol>
-					</div>
-        		    <div>
-        		    	<div class="box-footer">
-            				<div class="btn-group">
-            				    {{ form_widget(formStylesSet.reorder) }}
-            				</div>
-                		</div>
-                	</div>
-        		    {{ form_end(formStylesSet) }}
-            		<!-- /.box-footer -->
-				{% else %}
-    				<div class="box-body">
-					    {{'Click on \'Add a styles set\' to create a first styles set'|trans}}
-					</div>
-				{% endif %}
-			<!-- /.box-body -->
+				{% form_theme formProfiles '@EMSAdminUI/bootstrap5/form/forms.html.twig' %}
+				{{ form(formProfiles, {
+					reorder_label: 'view.wysiwyg.index.reorder',
+					toolbar: toolbar
+				}) }}
+			</div>
+		</div>
+		<div class="col-md-6">
+			<div>
+				{%  set toolbar %}
+					<a class="btn btn-primary" href="{{ path('ems_wysiwyg_styles_set_new') }}"><i class="fa fa-plus"></i> {{ add_label|default(formStylesSet.vars.add_label)|trans }}</a>
+				{%  endset %}
+
+				{% form_theme formStylesSet '@EMSAdminUI/bootstrap5/form/forms.html.twig' %}
+				{{ form(formStylesSet, {
+					reorder_label: 'view.wysiwyg.index.reorder',
+					toolbar: toolbar
+				}) }}
+			</div>
 		</div>
 	</div>
-</div>
 {% endblock %}
