--- a/EMS/admin-ui-bundle/src/Resources/views/bootstrap5/wysiwygprofile/form.html.twig
+++ b/EMS/admin-ui-bundle/src/Resources/views/bootstrap5/wysiwygprofile/form.html.twig
@@ -1,4 +1,5 @@
-{% trans_default_domain 'EMSCoreBundle' %}{% extends '@EMSAdminUI/bootstrap5/base/admin.html.twig' %}
+{% trans_default_domain 'EMSCoreBundle' %}
+{% extends '@EMSAdminUI/bootstrap5/base/admin.html.twig' %}
 
 
 {% block breadcrumb %}
