fix: -o icons missing in fa6

--- a/EMS/admin-ui-bundle/src/Resources/views/bootstrap5/view/columns.html.twig
+++ b/EMS/admin-ui-bundle/src/Resources/views/bootstrap5/view/columns.html.twig
@@ -2,5 +2,5 @@
 {% trans_default_domain 'emsco-twigs' %}
 
 {% block public %}
-    <i class="{% if line.data.public %}fa fa-check-square-o{% else %}fa fa-square-o{% endif %}"></i>
+    <i class="{% if line.data.public %}fa fa-check-square{% else %}fa fa-square{% endif %}"></i>
 {% endblock public %}
